mod/theme_bento/css_local/css.css
/* ... */
.navigation ul {
  list-style: none inside;
  margin: 0;
  padding: 0;
}

#owner_block_rss_feed {
  border-bottom: 1px dotted #ccc;
  padding-bottom: 1em;
  padding-top: 0.5em;
}

.admin_statistics, .admin_users_online, .usersettings_statistics, .admin_adduser_link, #add-box, #search-box, #logbrowser_search_area {

border-radius: 5px;
-moz-border-radius: 5px;
-webkit-border-radius: 5px;
-khtml-border-radius: 5px;

background: white;
border: 1px solid #ddd;
margin: 0 10px 10px;
padding: 10px;

}


/* ================ */
.menuitemtools {}

.submenuitemtools {
  box-shadow: 0 2px 1px #ddd;
  -moz-box-shadow: 0 2px 2px #ddd;
  -webkit-box-shadow: 0 2px 2px #ddd;
  background: #f6f6f6 url("../css/images/gradient-light-short-02.png") repeat-x scroll 0 -23px;
  border-color: transparent #F6F6F6 #EEEEEE;
  border-color: transparent #e6e6e6 #ccc;
  border-style: solid;
  border-width: 1px;
  display: none;
  font-size: 12px;
  list-style: none inside none;
  margin: 0;
  padding: 5px 0 0.5em;
  position: absolute;
  z-index: 9999;
  
  border-bottom-left: 5px;
  -moz-border-radius-bottomleft: 5px;
  -webkit-border-bottom-left: 5px;
  -khtml-border-bottom-left: 5px;
  
  border-bottom-right: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-right: 5px;
  -khtml-border-bottom-right: 5px;
}
  .submenuitemtools li {
    margin: 0 10px;
    padding: 2px 0;
  }
/* ================ */
#page_container {
  margin-left: auto;
  margin-right: auto;
}

#page_wrapper.grid_13 {
  width: 760px;
}
#page_wrapper.grid_16 {
  width: 940px;
}
#page_wrapper {
  margin: 0 auto;
  min-height: 300px;
  padding: 15px 0;
}

#layout_canvas {
  /* override original style*/
  border-radius: inherit;
  -moz-border-radius: inherit;
  -webkit-border-radius: inherit;
  -khtml-border-radius: inherit;
  
  background: transparent;
  border-bottom: none;
  border-right: none;
  margin: 0;
  min-height: 360px;
  padding: 0;
}

#dashboard_info {
  background: none repeat scroll 0 0 #BBDAF7;
  border-bottom: none;
  border-right: none;
  margin: 0 0 0;
  padding: 2px 5px;
}

#persistent_login {
  margin-top: -2.5em;
  margin-right: 9em;
}


.search_listing {
  margin-bottom: 2em;
}

.index_members {
  float: left;
  width: 40px;
  margin-right: 0.5em;
}

.loginbox {
  margin-left: 143px;
}



.collapsable_box {
  margin-top: -15px;
}
.box-header h2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.2em;
}
.toggle_box_contents,
.toggle_box_edit_panel {
  float: right;
}

.collapsable_box_editpanel {
  border: none;
  padding: 0;
  margin: 0;
}

/* == Widgest ============================================================= */
#widgets_left,
#widgets_right,
#widgets_middle {
  float: left;
  width: 280px;
}

a.button {
  padding: 0.3em 0.8em;
  text-decoration: none;
}
.pluginsettings,
.manifest_file {
  display: none;
}

.box-header-edit {
  float: right;
  display: inline;
}

.contentWrapper {
  background-color: transparent;
  margin: 0 1em 1em;
  overflow: hidden;
}
  .contentWrapper h2,
  .contentWrapper h3 {
    margin-left: 0;
  }
  .contentWrapper table {
    width: 100%;
  }
  .contentWrapper td {
    border: none;
  }
#collapsable_box_editpanel {
  display: none;
}


.simplepie_blog_title {
  text-align: left;
}

.simplepie_blog_title h2 {}

.simplepie_title h4 a {
  color: #690;
}
.simplepie_blog_title h2,
.simplepie_title h4 {
  margin-left: 0!important;
  margin-bottom: 0.5em;
}

.simplepie_item {
  border-bottom: 1px dotted #ccc;
  padding-bottom: 1em;
}
.simplepie_item:last-child {
  border-bottom: none;
  padding-bottom: 0;
  margin-bottom: 0;
}

.plugin_details {

}

.river_item_useravatar {
  margin: 0 1em;
}

form label {
  
}

form .description {
  font-size: 0.8em;
  color: #666;
}

/* Event Calendar */

#calendarmenu,
.ui-datepicker {
  margin: 0;
}

/* TEMP - Remove later */

#customise_editpanel table.draggable_widget h3 {
width: 100%;
background: #eee;
}

.draggable_widget {
  width: 85%;
  background: #eee;
  margin-bottom: 0.5em;
}

/* Polls */

.poll_edit_link {
  margin: 0;
}
  .poll_edit_link a {
    display: inline;
    padding: 0;
    margin-left: 0.5em;
  }

/* ***************************************
SYSTEM MESSSAGES
*************************************** */
  .messages,
  .messages_error {
    top: 42px;
    width:969px;
    z-index: 8000;
    margin: 0;
    position: fixed;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -khtml-border-radius: 5px;
    cursor: pointer;
    padding: 3px 10px 3px 10px;
    color: #333;
    
    box-shadow: 0 1px 2px #999;
    -moz-box-shadow: 0 1px 2px #999;
    -webkit-box-shadow: 0 1px 2px #999;
  }
  .messages {
    background: #efc;
    border: 4px solid #690;
  }
  .messages_error {
    border: 4px solid #D3322A;
    background: #F7DAD8;
  }
  .closeMessages {
    float:right;
    margin-top:17px;
  }
  .closeMessages a {
    color: #666;
    cursor: pointer;
    text-decoration: none;
    font-size: 80%;
  }
  .closeMessages a:hover {
    color: black;
  }

/* ***************************************
  PROFILE
*************************************** */
#profile_info {
/* TODO: Remove this Original CSS
  margin:0 0 20px 0;
  padding:20px;
  border-bottom:1px solid #cccccc;
  border-right:1px solid #cccccc;
  background: #fefefe;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
*/}

#profile_icon_wrapper {
  margin-bottom: 1em;
}

#profile_info td {
  border: none;
  vertical-align: top;
}

#profile_info_column_left {
  float:left;
  padding: 0;
  margin:0 20px 0 0;
}
#profile_info_column_middle {
  float:left;
  width:365px;
  padding: 0;
}
#profile_info_column_right {
  width:578px;
  margin:0 0 0 0;
  background:#dedede;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  padding:4px;
}
#dashboard_info {
  margin:0px 0px 0 0px;
  padding:20px;
  border-bottom:1px solid #cccccc;
  border-right:1px solid #cccccc;
  background: #bbdaf7;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
}
/* ... */

